--- a/cnn_mnist.ipynb
+++ b/cnn_mnist.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "#load mnist dataset\n",
-    "(X_train, y_train), (X_test, y_test) = mnist.load_data() #everytime loading data won't be so easy :)"
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data() "
    ]
   },
   {
@@ -268,7 +268,7 @@
    ],
    "source": [
     "batch_size = 128\n",
-    "num_epoch = 10\n",
+    "num_epoch = 3\n",
     "#model training\n",
     "model_log = model.fit(X_train, y_train,\n",
     "          batch_size=batch_size,\n",
@@ -320,8 +320,8 @@
     "# plotting the metrics\n",
     "fig = plt.figure()\n",
     "plt.subplot(2,1,1)\n",
-    "plt.plot(model_log.history['acc'])\n",
-    "plt.plot(model_log.history['val_acc'])\n",
+    "plt.plot(model_log.history['accuracy'])\n",
+    "plt.plot(model_log.history['val_accuracy'])\n",
     "plt.title('model accuracy')\n",
     "plt.ylabel('accuracy')\n",
     "plt.xlabel('epoch')\n",
